--- a/static/css/common-card.css
+++ b/static/css/common-card.css
@@ -90,6 +90,10 @@ body {
     /*box-shadow: 0 0 5px #ccc;*/
 }
 
+.card-info {
+    padding: 10px;
+}
+
 .aside-item {
     box-shadow: 0 0 5px #ccc;
 }
