--- a/handlers/note/component/note_ext_info.html
+++ b/handlers/note/component/note_ext_info.html
@@ -13,6 +13,6 @@
 
 {% if show_ext_info %}
     <div class="card">
-        <div class="pad5">{{file.creator}} 创建于 {{file.create_date}} 更新于 {{file.update_date}}</div>
+        <div class="card-text">{{file.creator}} 创建于 {{file.create_date}} 更新于 {{file.update_date}}</div>
     </div>
 {% end %}
