--- a/static/css/common-card.css
+++ b/static/css/common-card.css
@@ -90,8 +90,8 @@ body {
     /*box-shadow: 0 0 5px #ccc;*/
 }
 
-.card-info {
-    padding: 10px;
+.card-text {
+    padding: 5px;
 }
 
 .aside-item {
