优化删除笔记导致重名问题

--- a/handlers/note/component/option/note_dropdown.html
+++ b/handlers/note/component/option/note_dropdown.html
@@ -118,7 +118,7 @@ $(function () {
     // 恢复笔记
     $(".recover-option").click(function (e) {
         var noteId = $(e.target).attr("data-id");
-        xnote.api.note.recover(noteId, function() {
+        xnote.note.recover(noteId, function() {
             window.location.reload();
         });
     })
