优化前端样式

--- a/handlers/note/component/editor/markdown_edit.mobile.html
+++ b/handlers/note/component/editor/markdown_edit.mobile.html
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row margin-top-sm margin-bottom-sm">
             <input type="button" class="btn-default" onclick="xnote.editor.insertByElement(this)" value="#">
             <input type="button" class="btn-default" onclick="xnote.editor.insertByElement(this)" value="*">
             <input type="button" class="btn-default" onclick="xnote.editor.insertByElement(this)" value="-">
