--- a/handlers/note/component/note_path.html
+++ b/handlers/note/component/note_path.html
@@ -3,9 +3,9 @@
 {% init can_edit = False %}
 
 {% if len(pathlist) > 0 %}
-    <div class="btn-line-height padding-left-5">
+    <div class="btn-line-height padding-left-sm">
     {% for i, item_local in enumerate(pathlist) %}
-        {% if i > 0 %} / {% end %}<a href="{{item_local.url}}" class="link">{{ item_local.name }}</a>
+        {% if i > 0 %} / {% end %}<a href="{{item_local.url}}" class="link margin-0">{{ item_local.name }}</a>
     {% end %}
 
     {% if file != None and hasattr(file, "is_public") and file.is_public %}
