--- a/static/css/base/common.css
+++ b/static/css/base/common.css
@@ -912,19 +912,42 @@ select.no-border {
 .col-md-offset-2{margin-left:16.666666666666664%;}
 .col-md-offset-1{margin-left:8.333333333333332%;}
 .col-md-offset-0{margin-left:0;}
-.top-offset-1{margin-top:5px;}
-.top-offset-2{margin-top:10px;}
+.top-offset-1 {margin-top:5px;}
+.top-offset-2 {margin-top:10px;}
 .bottom-offset-1{margin-bottom:5px;}
 .bottom-offset-2{margin-bottom:10px;}
 .row{float: left;width: 100%;overflow: auto;}
-.padding-5 {padding: 5px;}
-.padding-10 {padding: 10px;}
-.padding-top-5 {padding-top: 5px;}
-.padding-top-10 {padding-top: 10px;}
-.padding-left-5 {padding-left: 5px;}
-.padding-bottom-5 {padding-bottom: 5px;}
-.padding-bottom-10 {padding-bottom: 10px}
-.margin-top-5 {margin-top: 5px;}
-.margin-top-10 {margin-top: 10px;}
-.margin-bottom-5 {margin-bottom: 5px;}
-.margin-bottom-10 {margin-bottom: 10px;}
+
+.padding-5, .padding-sm {
+    padding: 5px;
+}
+.padding-10, .padding-md {
+    padding: 10px;
+}
+.padding-top-5, .padding-top-sm {
+    padding-top: 5px;
+}
+.padding-top-10, .padding-top-md {
+    padding-top: 10px;
+}
+.padding-left-5, .padding-left-sm {
+    padding-left: 5px;
+}
+.padding-bottom-5, .padding-bottom-sm {
+    padding-bottom: 5px;
+}
+.padding-bottom-10, .padding-bottom-md {
+    padding-bottom: 10px
+}
+.margin-top-5, .margin-top-sm {
+    margin-top: 5px;
+}
+.margin-top-10, .margin-top-md {
+    margin-top: 10px;
+}
+.margin-bottom-5, .margin-bottom-sm {
+    margin-bottom: 5px;
+}
+.margin-bottom-10, .margin-bottom-md {
+    margin-bottom: 10px;
+}
