优化代码编辑器，支持大文件分段查看

--- a/handlers/fs/component/fs_sidebar.html
+++ b/handlers/fs/component/fs_sidebar.html
@@ -1,4 +1,5 @@
 {% set data_list = [
+    Storage(name = "我的上传", url = "/fs_upload"),
     Storage(name = "收藏夹", url = "/fs_bookmark"),
     Storage(name = "索引管理", url = "/fs_index"),
     Storage(name = "图片管理(TODO)", url = "/system/todo"),
