--- a/static/css/base/common-button.css
+++ b/static/css/base/common-button.css
@@ -169,3 +169,17 @@
     width: 100%;
     height: 30px;
 }
+
+.btn.circle {
+    border-radius: 14px;
+}
+
+.btn.link-style {
+    border: none;
+    background: none;
+    color: #08c;
+}
+
+.btn.link-style:hover {
+    text-decoration: underline;
+}
