--- a/static/css/base/common-dialog.css
+++ b/static/css/base/common-dialog.css
@@ -17,7 +17,7 @@
 }
 
 
-.dialog-body {
+div.dialog-body {
     position: absolute;
     padding: 10px;
     top: 0px;
@@ -25,6 +25,7 @@
     overflow-y: auto;
     right: 0px;
     left: 0px;
+    margin-bottom: 0px;
 }
 
 .dialog-footer {
